# kvm-fuzz

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  markov.py  target  target.c
hypervisor/: CMakeLists.txt  README.md
hypervisor/experiments/resets/: output_aflpp  output_kvmfuzz  output_nyx  plot.plt  resets_aflpp.sh  resets_exp.cpp  resets_kvmfuzz.sh  resets_nyx.sh  resets_test.c
hypervisor/experiments/scalability/: output_aflpp  output_kvmfuzz  plot.plt  scalability_aflpp.sh  scalability_kvmfuzz.sh
hypervisor/include/: args.h  common.h  corpus.h  coverage.h  coverage_breakpoints.h  coverage_intel_pt.h  coverage_none.h  cxxopts.hpp  elf_debug.h  elf_parser.h  elfs.h  fault.h  files.h  kvm_aux.h  mmu.h  mutator.h  page_walker.h  rng.h  stats.h  tracing.h  utils.h  vm.h
hypervisor/src/: args.cpp  corpus.cpp  elf_debug.cpp  elf_parser.cpp  elfs.cpp  files.cpp  hypercalls.cpp  main.cpp  mmu.cpp  mutator.cpp  page_walker.cpp  tracing.cpp  utils.cpp  vm.cpp
include/: common.h  corpus.h  elf_parser.h  elf_parser.hpp  file.h  kvm_aux.h  magic_values.h  mmu.h  page_walker.h  stats.h  syscall_str.h  vm.h
kernel/: CMakeLists.txt  README.md  build.zig  linker.ld
kernel/include/: apic.h  asm.h  aux.h  common.h  file.h  gdt.h  hypercalls.h  idt.h  init.h  interrupts.h  kernel.h  libcpp.h  mem.h  page_walker.h  safe_mem.h  syscall_str.h  syscalls.h  user.h  user_ptr.h
kernel/include/linux/: others.h
kernel/include/linux/linux/: sysctl.h  version.h
kernel/linux/: others.h
kernel/linux/asm-generic/: socket.h
kernel/src/: apic.cpp  common.h  common.zig  file.cpp  hypercalls.cpp  hypercalls.h  hypercalls.zig  init_gdt.cpp  init_idt.cpp  init_syscall.cpp  interrupts.cpp  interrupts.h  interrupts.zig  isrs.asm  kernel.cpp  libcpp.cpp  linux.zig  log.zig  main.cpp  main.zig  mem.cpp  page_walker.cpp  panic.zig  pit.cpp  printf.cpp  process.cpp  process.h  safe_mem.cpp  scheduler.cpp  scheduler.h  scheduler.zig  syscall_str.h  syscalls.cpp  user.cpp  user.h
kernel/src/fs/: file_description.cpp  file_description.h  file_description.zig  file_manager.cpp  file_manager.h  file_manager.zig
kernel/src/libcpp/: libcpp.cpp  libcpp.h  optional.h  printf.h  ref_counted.h  safe_mem.cpp  safe_mem.h  user_ptr.h
kernel/src/mem/: address_space.cpp  address_space.h  address_space.zig  heap.cpp  heap.h  heap.zig  layout.zig  mem.cpp  mem.h  mem.zig  page_table.cpp  page_table.h  pmm.cpp  pmm.h  pmm1.zig  pmm2.zig  pmm3.zig  range.h  region_manager.zig  safe.zig  vmm.cpp  vmm.h  vmm.zig  vmm2.zig
kernel/src/process/: FileDescriptorTable.zig  Process.zig  common.zig  user.zig
kernel/src/process/syscalls/: access.zig  brk.zig  clone.zig  dup.zig  exit.zig  fcntl.zig  futex.zig  getcwd.zig  getpid.zig  kill.zig  lseek.zig  mmap.zig  open.zig  prctl.zig  prlimit.zig  random.zig  read.zig  readlink.zig  robust_list.zig  sched.zig  sendfile.zig  signals.zig  socket.zig  stat.zig  sysinfo.zig  time.zig  uname.zig  wait.zig  write.zig
kernel/src/syscalls/: access.cpp  brk.cpp  clone.cpp  dup.cpp  fcntl.cpp  getcwd.cpp  ioctl.cpp  kill.cpp  lseek.cpp  mmap.cpp  open.cpp  prctl.cpp  prlimit.cpp  read.cpp  readlink.cpp  socket.cpp  stat.cpp  sysinfo.cpp  time.cpp  uname.cpp  write.cpp
kernel/src/utils/: ref_counter.zig  utils.zig
kernel/src/x86/: apic.zig  asm.h  asm.zig  gdt.zig  idt.zig  page_table.h  paging.zig  perf.zig  pit.zig  syscall.zig  x86.zig
kernel/src/x86/apic/: apic.cpp  apic.h
kernel/src/x86/gdt/: gdt.cpp  gdt.h  gdt_entry.h  tss_entry.h
kernel/src/x86/idt/: idt.cpp  idt.h  idt_entry.h
kernel/src/x86/perf/: perf.cpp  perf.h
kernel/src/x86/pit/: pit.cpp  pit.h
kernel/src/x86/syscall/: syscall.cpp  syscall.h
kernel_zig/: build.zig  linker.ld
kernel_zig/src/: common.zig  hypercalls.zig  interrupts.zig  linux.zig  log.zig  main.zig  panic.zig  process.zig  scheduler.zig
kernel_zig/src/fs/: file_description.zig  file_manager.zig  fs.zig
kernel_zig/src/mem/: address_space.zig  heap.zig  layout.zig  mem.zig  pmm.zig  pmm2.zig  pmm3.zig  safe.zig  vmm.zig
kernel_zig/src/process/: FileDescriptorTable.zig  Process.zig  user.zig
kernel_zig/src/process/syscalls/: access.zig  brk.zig  clone.zig  dup.zig  exit.zig  getcwd.zig  getpid.zig  lseek.zig  mmap.zig  open.zig  prctl.zig  prlimit.zig  read.zig  readlink.zig  socket.zig  stat.zig  uname.zig  wait.zig  write.zig
kernel_zig/src/utils/: ref_counter.zig  utils.zig
kernel_zig/src/x86/: apic.zig  asm.zig  gdt.zig  idt.zig  paging.zig  perf.zig  syscall.zig  x86.zig
scripts/: build_cross_compiler.sh  generate_basic_blocks.py  instructions.plt  plot.plt  run_tests_on_kvm-fuzz.sh  run_tests_on_linux.sh  scalability.plt
src/: corpus.cpp  elf_parser.cpp  file.cpp  main.cpp  mmu.cpp  page_walker.cpp  syscalls.cpp  vm.cpp
tests/: CMakeLists.txt  brk.cpp  common.h  dup.cpp  files.cpp  fork.cpp  input_hello_world  mmap.cpp  readlink.cpp  socket.cpp  tests.cpp  thread_local.cpp  uname.cpp
tests/hypervisor/: common.h  files.cpp  hooks.cpp  inst_count.cpp  main.cpp
tests/hypervisor/binaries/: files.c  hooks.s
tests/syscalls/: brk.cpp  common.h  dup.cpp  fcntl.cpp  files.cpp  fork.cpp  getcwd.cpp  misc.cpp  mmap.cpp  readlink.cpp  safe_mem.cpp  sched.cpp  socket.cpp  stdin.cpp  thread_local.cpp
